crates/nash-report/tests/solve/snapshots/solve__inference__nominal_record_update_preserves_field_type.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 4130
description: "module Main exposing (..)\ntype alias point = { x : int }\nchange : point -> string -> point\nchange p s = { p | x = s }\n"
info: diagnostic
---
nash::type::field_mismatch

  × Type mismatch: expected `int`, found `string`.
   ╭─[Main.nash:4:20]
 3 │ change : point -> string -> point
 4 │ change p s = { p | x = s }
   ·                    ┬
   ·                    ╰── field `x` update of `p`
   ╰────
  help: Rebuild the record to change a field's type.
