crates/nash-report/tests/solve/snapshots/solve__inference__nominal_records_do_not_unify.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2370
description: "module Main exposing (..)\ntype alias point = { x : int }\ntype alias other = { x : int }\nf : point -> other\nf r = r\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `other`, found `point`.
   ╭─[Main.nash:5:7]
 3 │ type alias other = { x : int }
 4 │ f : point -> other
   ·     ───────┬──────
   ·            ╰── declared type
 5 │ f r = r
   ·       ┬
   ·       ╰── body of `f`
   ╰────
