crates/nash-report/tests/solve/snapshots/solve__inference__operator_methods_preserve_provider_and_backing_method.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2663
description: "module Methods exposing (..)\ninfix left 5 (<+>) = select\ntrait Select 'a where\n    select : 'a -> 'a -> 'a\nimpl Select () where\n    select x _ = x\nplain : 'a -> 'a -> 'a\nplain x _ = x\n\n\nmodule Operators exposing ((<*>), (<|>))\nimport Methods exposing (Select, plain)\ninfix left 5 (<*>) = select\ninfix left 5 (<|>) = plain\n\n\nmodule Main exposing (..)\nimport Methods exposing ((<+>))\nimport Operators exposing ((<*>))\npick x y = x <*> y\nleft = () <+> ()\nright = () <*> ()\nsection = (() <*>)\noperator = (<*>)\n\n\nmodule OnlyOperators exposing (..)\nimport Operators exposing ((<*>), (<|>))\nvalue = () <*> ()\nordinary = () <|> ()\n"
---
Main:
left : unit
operator : forall a. Select a => a -> a -> a
pick : forall a. Select a => a -> a -> a
right : unit
section : unit -> unit
OnlyOperators:
ordinary : unit
value : unit
