crates/nash-report/tests/solve/snapshots/solve__inference__partial_alias_nominal_mismatch.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 3026
description: "module Higher exposing (..)\ntype alias Pair 'left 'right = { first : 'left, second : 'right }\ntrait Keep 'f where\n    keep : 'f 'a -> 'f 'a\nimpl Keep (Pair 'a) where\n    keep x = x\nthrough x = keep x\n\n\nmodule Main exposing (..)\nimport Higher exposing (..)\ntype Color = Red | Blue\ntype Mood = Calm | Busy\npair : Pair Color Color\npair = { first = Red, second = Blue }\nother : Pair Mood Color\nother = Pair Calm Red\nkept = through pair\nkeptOther = through other\n\n\nmodule Reject exposing (..)\nimport Higher exposing (..)\ntype Color = Red | Blue\ntype alias Other 'left 'right = { first : 'left, second : 'right }\nbad = through (Other Red Blue)\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Keep (Other Color)`.
   ╭─[Reject.nash:5:7]
 4 │ type alias Other 'left 'right = { first : 'left, second : 'right }
 5 │ bad = through (Other Red Blue)
   ·       ───┬───
   ·          ╰── required by `through`
   ╰────
  help: Available impl heads:

            (Pair 'a0)

        Import or define an impl for `Keep (Other Color)`.
