crates/nash-report/tests/solve/snapshots/solve__inference__positional_ctor_record_operations_stay_positional.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 4268
description: "Code:\n\nmodule Main exposing (..)\ntype alias point = { x : unit }\ntype wrapper = Wrap point\nmain = Wrap { x = () }\nget (Wrap { x }) = x\n"
---
get : wrapper -> unit
main : wrapper
