crates/nash-report/tests/solve/snapshots/solve__inference__qualified_annotation_keeps_context_only_types_and_reserves_their_names.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 1477
---
forall a b. (Show (List b), Keep a, Ground unit) => b
