crates/nash-report/tests/solve/snapshots/solve__inference__record_access_needs_known_type.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2307
description: "module Main exposing (getX)\n\ngetX r = r.x\n"
info: diagnostic
---
nash::type::ambiguous_record_access

  × Cannot determine record type `'a`.
   ╭─[Main.nash:3:10]
 2 │ 
 3 │ getX r = r.x
   ·          ─┬─
   ·           ╰── field `x` of `r`
   ╰────
  help: Add a type annotation that identifies the record.
